# smbv

./: CMakeLists.txt  README.md
include/: is_optional.h  smbv_events.h  smbv_machine.hpp
src/: CMakeLists.txt  example.cpp
test/: CMakeLists.txt
